--- a/fs/Makefile
+++ b/fs/Makefile
@@ -140,3 +140,4 @@ obj-$(CONFIG_VBOXSF_FS)		+= vboxsf/
 obj-$(CONFIG_ZONEFS_FS)		+= zonefs/
 obj-$(CONFIG_HAYLEY_FS)		+= hayleyfs/
 obj-$(CONFIG_NOVA_FS)		+= nova/
+obj-$(CONFIG_DUOFS) 		+= winefs/
