--- a/fs/hayleyfs/Kconfig
+++ b/fs/hayleyfs/Kconfig
@@ -5,4 +5,10 @@ config HAYLEY_FS
 	depends on FS_DAX
 	depends on X86_PMEM_LEGACY
 	help
-	  This is the Hayley filesystem. More details to follow.
+	  HayleyFS 
+
+config HAYLEY_FS_DEBUG
+	bool "HayleyFS debugging support"
+	depends on HAYLEY_FS
+	help 
+	  Enable this to compile the kernel with support for using Chipmunk to test HayleyFS. 
